# samsung-api

./: README.md  docker-compose.yml
story/: Dockerfile  alembic.ini  crud.py  docker-compose.yml  endpoints.py  jwt.py  jwt_token.py  main.py  models.py  requirements.txt  schemas.py
story/alembic/: env.py
story/application/: main.py
story/core/: text_generation_core.py
story/handlers/: choice_handler.py  genre_handler.py  story_handler.py  topic_handler.py
story/infrastructure/: database.py
story/nginx/: nginx.conf
story/protocols/: repository.py  service.py
story/repositories/: audio_repository.py  genre_repository.py  image_repository.py  page_repository.py  repository.py  story_repository.py  topic_repository.py
streaming/: Dockerfile  alembic.ini  docker-compose.yml  main.py  test_client.py
streaming/web/: Dockerfile  alembic.ini  pyproject.toml
streaming/web/app/application/: main.py
streaming/web/app/core/: audio_generation_core.py
streaming/web/app/domain/models/: audio_model.py
streaming/web/app/domain/repositories/: audio_repository.py
streaming/web/app/domain/services/: audio_service.py
streaming/web/app/handlers/: audio_handler.py
streaming/web/app/infrastructure/: database.py
streaming/web/app/infrastructure/alembic/: env.py
streaming/web/app/infrastructure/alembic/versions/: 4dab4bcca346_ddd_migration.py  ac213cd5c5f4_ddd.py  b4f62d8bc44f_ddd_migration.py
streaming/web/app/interfaces/schemas/: audio_schema.py
user/: Dockerfile  auth_service.py  docker-compose.yml  mail.py  main.py  models.py  requirements.txt  token.py
(+123 files in other folders)
